# meme-karuta

./: .gitattributes  .gitignore  CLAUDE.md  README.md  check_balance.py  docker-compose.yml
.github/workflows/: deploy.yml
services/android/src/: AnalyticsLogger.kt  AppPreferences.kt  ConnectionMonitor.kt  GameState.kt  GameWebSocketClient.kt  MainActivity.kt  OfflineCache.kt  RetryPolicy.kt  ScoreFormatter.kt
services/card-gen/: Dockerfile  app.py  cards.json  generate.py  loader.py  requirements.txt  stats.py
services/card-gen/data/: README.md
services/card-gen/tests/: test_generate.py  test_stats.py
services/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
services/frontend/src/: App.js  App.tsx  styles.css
services/gateway/: Dockerfile  go.mod  main.go  main_test.go  ratelimit.go  ratelimit_test.go  request_log.go  request_log_test.go
services/judge/: Cargo.toml  Dockerfile
services/judge/src/: health.rs  main.rs  metrics.rs  validation.rs
services/nginx/: nginx.conf
services/pokedex/: Dockerfile  pokedex.py
services/queue/: Dockerfile  build.sbt
services/realtime/: Dockerfile  mix.exs
services/serializer/: Dockerfile  Makefile  base64.c  base64.h  bitwriter.c  bitwriter.h  checksum.c  checksum.h  error_strings.c  metrics.c  metrics.h  serializer.c  serializer.h
services/shuffle/: Dockerfile  shuffle.cabal
services/shuffle/src/: Algorithms.hs  Format.hs  Logger.hs  Main.hs  Seed.hs  Stats.hs  Validate.hs
services/tasks/: Rakefile
services/tasks/lib/: backup_manager.rb  config_loader.rb  (+9 more)
(+45 files in other folders)
